Cambio en boletines

--- a/boletines/index.html
+++ b/boletines/index.html
@@ -31,7 +31,7 @@
                         <td>La Americana</td>
                         <td>Av. Corrientes 1383</td>
                         <td><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></td>
-                        <td> <a href="/restaurantes/laamericana.html">Mas Informacion</a></td>
+                        <td> <a href="./restaurantes/laamericana.html">Mas Informacion</a></td>
                     </tr>
                     <tr>
                         <td>2</td>
